<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
	   	    android:layout_marginTop="8dp"
	   	    android:paddingLeft="8dp"
	   	    android:paddingTop="3dp"
	   	    android:paddingBottom="3dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/advancedSettingsCaps"
	        android:textColor="#c6c6c6"
	   	    android:textSize="12sp" />
     
     	<View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
    	<LinearLayout
    	    xmlns:android="http://schemas.android.com/apk/res/android"
    	    android:id="@+id/A_freqHolder"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:clickable="true"
    	    android:orientation="vertical" >
		    <FrameLayout
	    	    xmlns:android="http://schemas.android.com/apk/res/android"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
			    android:layout_weight="1"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
	    	    android:orientation="horizontal" >
		    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="left"
			        android:background="#00000000"
			        android:text="@string/A_freq"
			        android:textSize="16sp" />
		    	
		    	<Spinner
			        android:id="@+id/select_freq"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		    	    android:layout_gravity="right"
			        android:layout_marginRight="10dp"
					android:clickable="false"
			   	    android:textSize="14sp"
			    	android:background="#00000000"
			        android:entries="@array/frequency_array"
			        android:prompt="@string/select_freq"
			        android:spinnerMode="dialog" />
		    	
		    	
		    
		    </FrameLayout>
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
	        	android:layout_marginBottom="12dp"
			    android:layout_marginLeft="10dp"
		        android:background="#00000000"
		        android:textSize="12sp"
		        android:text="@string/select_freq" />

	    </LinearLayout>
     
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
    	<LinearLayout
    	    xmlns:android="http://schemas.android.com/apk/res/android"
    	    android:id="@+id/A_advancedHolder"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:clickable="true"
    	    android:orientation="horizontal" >
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp"
		        android:text="@string/A_advanced" />
		    <CheckBox
		        android:id="@+id/A_advancedBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="clip_vertical"
		        android:focusable="false" />

	    </LinearLayout>
    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_titleHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_titleBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>
    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_locationHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_location"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_locationBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>
    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_descriptionHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_description"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_descriptionBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>

    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_vibrateStartHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_vibrateStart"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_vibrateStartBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>

    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_vibrateEndHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_vibrateEnd"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_vibrateEndBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>
	    
    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
    	<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/A_toastHolder"
	    	android:orientation="horizontal" >
		    <TextView
		        android:text="@string/A_toast"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="12dp"
		        android:layout_marginTop="12dp"
		        android:layout_marginLeft="10dp"
		        android:layout_weight="1"
		        android:background="#00000000"
		        android:textSize="16sp" />
		    <CheckBox
		        android:id="@+id/A_toastBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="fill_vertical"
		        android:focusable="false" />
	    </LinearLayout>
    	
    	
</LinearLayout>
</ScrollView>
