<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
		
		 <TextView
	   	    android:layout_marginTop="8dp"
	   	    android:paddingLeft="8dp"
	   	    android:paddingTop="3dp"
	   	    android:paddingBottom="3dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/select_groupname"
	        android:textColor="#c6c6c6"
	   	    android:textSize="12sp" 
	   	    android:id="@+id/groupLabel" />
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
	    
	   <LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/groupHolder"
	    	android:orientation="horizontal" >
	    	<ImageView
		        android:layout_width="20dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginLeft="10dp"
		        android:layout_height="20dp"
		        android:src="@drawable/group" />
		    <TextView
		        android:id="@+id/groupName"
		        android:layout_width="match_parent"
		   	    android:layout_marginLeft="10dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginBottom="12dp"
		   	    android:textSize="16sp"
		    	android:background="#00000000"
		        android:layout_height="wrap_content" />
	    </LinearLayout>
	    <TextView
	   	    android:layout_marginTop="8dp"
	   	    android:paddingLeft="8dp"
	   	    android:paddingTop="3dp"
	        android:textColor="#c6c6c6"
	   	    android:paddingBottom="3dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/calendars_section"
	   	    android:textSize="12sp" />
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
			    
		<LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
			android:id="@+id/calHolder"
	    	android:orientation="horizontal" >
	    	<ImageView
		        
		        android:layout_width="20dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginLeft="10dp"
		        android:layout_height="20dp"
		        android:src="@drawable/calendar" />
		    <TextView
		        android:id="@+id/selectCalendars"
		        android:layout_width="match_parent"
		   	    android:layout_marginLeft="10dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginBottom="12dp"
		   	    android:textSize="16sp"
		    	android:background="#00000000"
		        android:layout_height="wrap_content" />
	    </LinearLayout>
			
	    
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:gravity="fill_vertical"
		    android:paddingBottom="3dp"
		    android:paddingLeft="8dp"
	        android:textColor="#c6c6c6"
		    android:paddingTop="3dp"
		    android:text="@string/events_section"
		    android:textSize="12sp" />

	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
	    <LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:id="@+id/alldayHolder"
			android:clickable="true"
	    	android:orientation="horizontal" >
	    	<ImageView
		        
		        android:layout_width="20dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginLeft="10dp"
		        android:layout_height="20dp"
		        android:src="@drawable/allday" />
		    <Spinner
		        android:id="@+id/select_allday"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		   	    android:layout_marginLeft="10dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginBottom="12dp"
				android:clickable="false"
		   	    android:textSize="16sp"
		    	android:background="#00000000"
		        android:entries="@array/allday_array"
		        android:prompt="@string/select_allday"
		        android:spinnerMode="dialog" />
	    </LinearLayout>
		    
    	<View
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="#525252" />
	    <LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:id="@+id/busyHolder"
			android:clickable="true"
	    	android:orientation="horizontal" >
	    	<ImageView
		        
		        android:layout_width="20dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginLeft="10dp"
		        android:layout_height="20dp"
		        android:src="@drawable/busy" />
		    <Spinner
		        android:id="@+id/select_busy"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		   	    android:layout_marginLeft="10dp"
				android:clickable="false"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginBottom="12dp"
		   	    android:textSize="16sp"
		    	android:background="#00000000"
		        android:entries="@array/busy_array"
		        android:prompt="@string/select_busy"
		        android:spinnerMode="dialog" />
	    </LinearLayout>
	    	
		    
	    	<View
			    android:id="@+id/titleLine"
			    android:layout_width="fill_parent"
			    android:layout_height="1px"
			    android:background="#525252" />

	    	<LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:id="@+id/titleHolder"
				android:clickable="true"
		    	android:orientation="horizontal" >
			    	<ImageView
				        
				        android:layout_width="20dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginLeft="10dp"
				        android:layout_height="20dp"
				        android:src="@drawable/title" />
				    
				    <TextView
				        android:id="@+id/title"
				        android:layout_width="match_parent"
				   	    android:layout_marginLeft="10dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginBottom="12dp"
				   	    android:textSize="16sp"
				    	android:background="#00000000"
				        android:layout_height="wrap_content" />
		    </LinearLayout>
		    				
	    	    
	    	<View
			    android:id="@+id/locationLine"
			    android:layout_width="fill_parent"
			    android:layout_height="1px"
			    android:background="#525252" />
	    	<LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:id="@+id/locationHolder"
				android:clickable="true"
		    	android:orientation="horizontal" >
			    	<ImageView
				        
				        android:layout_width="20dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginLeft="10dp"
				        android:layout_height="20dp"
				        android:src="@drawable/location" />
				    
				    <TextView
				        android:id="@+id/location"
				        android:layout_width="match_parent"
				   	    android:layout_marginLeft="10dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginBottom="12dp"
				   	    android:textSize="16sp"
				    	android:background="#00000000"
				        android:layout_height="wrap_content" />
		    </LinearLayout>
		    
	    	    
	    	<View
			    android:id="@+id/descriptionLine"
			    android:layout_width="fill_parent"
			    android:layout_height="1px"
			    android:background="#525252" />

	    	<LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:id="@+id/descriptionHolder"
				android:clickable="true"
		    	android:orientation="horizontal" >
			    	<ImageView
				        
				        android:layout_width="20dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginLeft="10dp"
				        android:layout_height="20dp"
				        android:src="@drawable/description" />
				    
				    <TextView
				        android:id="@+id/description"
				        android:layout_width="match_parent"
				   	    android:layout_marginLeft="10dp"
				   	    android:layout_marginTop="12dp"
				   	    android:layout_marginBottom="12dp"
				   	    android:textSize="16sp"
				    	android:background="#00000000"
				        android:layout_height="wrap_content"  />
		    </LinearLayout>
	    	    
	    	    
	    
	    <TextView
	   	    android:layout_marginTop="8dp"
	   	    android:paddingLeft="8dp"
	   	    android:paddingTop="3dp"
	   	    android:paddingBottom="3dp"
	        android:textColor="#c6c6c6"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/what_section"
	   	    android:textSize="12sp" />
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
	   	
	    <LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:clickable="true"
		    android:id="@+id/modeHolder"
	    	android:orientation="horizontal" >
	    	<ImageView		        
		        android:layout_width="20dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginLeft="10dp"
		        android:layout_height="20dp"
		        android:src="@drawable/mute" />
		    <Spinner
		        android:id="@+id/select_mode"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		   	    android:layout_marginLeft="10dp"
		   	    android:layout_marginTop="12dp"
		   	    android:layout_marginBottom="12dp"
				android:clickable="false"
		   	    android:textSize="16sp"
		    	android:background="#00000000"
		        android:prompt="@string/select_mode"
		        android:spinnerMode="dialog" />
	    </LinearLayout>
	    
	    
	        
	        
	    <LinearLayout
	    	xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:id="@+id/ringtoneTable"
			android:clickable="true"
	    	android:orientation="vertical" >
	    	<View
			    android:layout_width="fill_parent"
			    android:layout_height="1px"
			    android:background="#525252" />
	        <LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
	    		android:orientation="horizontal" >
		    	<ImageView
			        
			        android:layout_width="20dp"
			   	    android:layout_marginTop="12dp"
			   	    android:layout_marginLeft="10dp"
			        android:layout_height="20dp"
			        android:src="@drawable/ringtone" />
		    	
			    <TextView
			        android:id="@+id/selectRingtone"
			        android:layout_width="match_parent"
			   	    android:layout_marginLeft="10dp"
			   	    android:layout_marginTop="12dp"
			   	    android:layout_marginBottom="12dp"
			   	    android:textSize="16sp"
			    	android:background="#00000000"
			        android:text="Select Ringtone"
			        android:layout_height="wrap_content" />
	    	</LinearLayout>
	    	</LinearLayout>
	        		    
		    <LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:id="@+id/volumeTable"
		    	android:orientation="vertical" >
		    	<View
				    android:layout_width="fill_parent"
				    android:layout_height="1px"
				    android:background="#525252" />
	        <LinearLayout
		    	xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
	    		android:orientation="horizontal" >
		    	<ImageView
			        
			        android:layout_width="20dp"
			   	    android:layout_marginTop="12dp"
			   	    android:layout_marginLeft="10dp"
			        android:layout_height="20dp"
			        android:src="@drawable/volume" />
		    	
			    <TextView
			        android:id="@+id/volumeText"
			   	    android:layout_marginTop="12dp"
		    	    android:layout_marginLeft="8dp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/select_volume" />
	    		</LinearLayout>
			    
			    <SeekBar
			        android:id="@+id/volume"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" />
	    	</LinearLayout>
		    
	    <TextView
	   	    android:layout_marginTop="8dp"
	   	    android:paddingLeft="8dp"
	   	    android:paddingTop="3dp"
	   	    android:paddingBottom="3dp"
	        android:textColor="#c6c6c6"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/when_section"
	   	    android:textSize="12sp" />
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="3px"
		    android:background="#313131" />
	   	
		    <TextView
		        android:id="@+id/beforeEventText"
	    	    android:layout_marginTop="8dp"
	    	    android:layout_marginLeft="8dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="Begin QuietTime before event starts" />
		    <SeekBar
		        android:id="@+id/beforeEvent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/afterEventText"
	    	    android:layout_marginTop="8dp"
	    	    android:layout_marginLeft="8dp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="End QuietTime after event starts" />
		    <SeekBar
		        android:id="@+id/afterEvent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
	    
	</LinearLayout>
</ScrollView>